// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Header renders correctly in english 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "height": "6%",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "backgroundColor": "#455A64",
          "flexDirection": "row",
          "height": "100%",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "flex-start",
            "alignSelf": "center",
            "flex": 1,
            "justifyContent": "center",
            "marginHorizontal": "2%",
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      />
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "flex": 1,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#000",
              "fontFamily": "System",
              "fontSize": 16,
            },
            Object {
              "color": "#F0F0F0",
              "textAlign": "center",
            },
          ]
        }
        uppercase={false}
      />
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "flex-end",
            "alignSelf": "center",
            "flex": 1,
            "marginRight": "2%",
          },
        ]
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(255, 255, 255, 1)",
              "borderRadius": 18,
              "flexDirection": "row",
              "height": 36,
              "padding": 3,
              "width": 72,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "flex-start",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 9,
                }
              }
            >
              EN
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgba(229, 225, 224, 1)",
                "borderRadius": 15,
                "height": 30,
                "justifyContent": "center",
                "position": "absolute",
                "transform": Array [
                  Object {
                    "translateX": 6,
                  },
                ],
                "width": 30,
              }
            }
          >
            <View>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "fontSize": 9,
                  }
                }
              >
                EN
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 9,
                }
              }
            >
              PT
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Custom Header renders correctly in portuguese 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "height": "6%",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "backgroundColor": "#455A64",
          "flexDirection": "row",
          "height": "100%",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "flex-start",
            "alignSelf": "center",
            "flex": 1,
            "justifyContent": "center",
            "marginHorizontal": "2%",
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      />
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "flex": 1,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#000",
              "fontFamily": "System",
              "fontSize": 16,
            },
            Object {
              "color": "#F0F0F0",
              "textAlign": "center",
            },
          ]
        }
        uppercase={false}
      />
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "flex-end",
            "alignSelf": "center",
            "flex": 1,
            "marginRight": "2%",
          },
        ]
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(255, 255, 255, 1)",
              "borderRadius": 18,
              "flexDirection": "row",
              "height": 36,
              "padding": 3,
              "width": 72,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "flex-start",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 9,
                }
              }
            >
              EN
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgba(229, 225, 224, 1)",
                "borderRadius": 15,
                "height": 30,
                "justifyContent": "center",
                "position": "absolute",
                "transform": Array [
                  Object {
                    "translateX": 36,
                  },
                ],
                "width": 30,
              }
            }
          >
            <View>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "fontSize": 9,
                  }
                }
              >
                
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 9,
                }
              }
            >
              PT
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
